# Barbutschka

./: CMakeLists.txt  README.md  hello.txt  main.cpp
Planning and other/: ECS Plan.md  TODO.md  malloc business chatgpt.txt
Planning and other/PixelArt/: PixelArt.md
Planning and other/Tiled/: basic.tsx  first_test.tiled-session  simple_tileset.tsx
Tiled/: first_test.tiled-session  test.csv
assets/: TODO.md  debugging_collision.csv  debugging_collision.tmx  map_design_tests.aseprite  testing_slopes.csv
assets/Tempplates/: moving_platform.tx
assets/tmp/: Idle.aseprite  JumpFall.aseprite  JumpStart.aseprite  Walk.aseprite
code/: component.cpp  component.h  component_list.cpp  component_list.h  components.h  components_old.h  constants.h  defs.h  ecs_m.cpp  ecs_m.h  ecs_manager.cpp  ecs_manager.h  ecs_manager_old.cpp  ecs_manager_old.h  events.h  exceptions.h  flags.h  globals.cpp  globals.h  graphic_layers.cpp  graphic_layers.h  initialize_components.h  input.cpp  input.h  system.cpp  system.h  systems.h  utils.cpp  utils.h
code/systems/: core.cpp  drawing.cpp  moving_things.cpp  player.cpp  position_and_collision.cpp  silly_test  silly_test.cpp  sys1.cpp
new_code/: variants  variants.cpp
new_code_again/: components  components.cpp
planning_and_design/: Barbuta.avif  Broad plan.md  Engine plan.md  TODO.md  testing_jump.ggb
planning_and_design/old_code/: old_main.cpp
planning_and_design/pixelart/: PixelArt.md
planning_and_design/tiled/: Dungeon Tile Set.tsx  basic.tsx  debug_tileset.tsx  enemies.tsx  larger world test.tmx  larger_world_test_2.tmx  (+2 more)
(+6 files in other folders)
